{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 11,
  "lineage": "2c093811-264f-1361-8420-4c6109c1fcfa",
  "resources": [
    {
      "module": "module.nk26network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgroup26",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group/sg-08ff9b73e9cb12972",
            "description": "web server traffic allowed ssh \u0026 http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ff9b73e9cb12972",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mysecgrp",
            "name_prefix": "",
            "owner_id": "737795138174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-021df01b185997239"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nk26network.aws_vpc.nkvpc26"
          ]
        }
      ]
    },
    {
      "module": "module.nk26network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snet_db_26",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:subnet/subnet-02228fa1420742171",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02228fa1420742171",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737795138174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dbsnet-27-test"
            },
            "tags_all": {
              "Name": "dbsnet-27-test"
            },
            "vpc_id": "vpc-021df01b185997239"
          },
          "dependencies": [
            "module.nk26network.aws_vpc.nkvpc26"
          ]
        }
      ]
    },
    {
      "module": "module.nk26network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snet_web_26",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:subnet/subnet-09cd82c2731a92f55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cd82c2731a92f55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737795138174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wsnet-26-test"
            },
            "tags_all": {
              "Name": "wsnet-26-test"
            },
            "vpc_id": "vpc-021df01b185997239"
          },
          "dependencies": [
            "module.nk26network.aws_vpc.nkvpc26"
          ]
        }
      ]
    },
    {
      "module": "module.nk26network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nkvpc26",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:vpc/vpc-021df01b185997239",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02cc10b5b03ad7cb9",
            "default_route_table_id": "rtb-0759d44ff7afe4a94",
            "default_security_group_id": "sg-0308a56bd15ff7e61",
            "dhcp_options_id": "dopt-0659f97c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-021df01b185997239",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0759d44ff7afe4a94",
            "owner_id": "737795138174",
            "tags": {
              "Name": "nk-vpc-26"
            },
            "tags_all": {
              "Name": "nk-vpc-26"
            }
          }
        }
      ]
    },
    {
      "module": "module.nk26network",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "nk-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group-rule/sgr-00ba5a2deae41392a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00ba5a2deae41392a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08ff9b73e9cb12972",
            "security_group_rule_id": "sgr-00ba5a2deae41392a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nk26network.aws_security_group.secgroup26",
            "module.nk26network.aws_vpc.nkvpc26"
          ]
        }
      ]
    },
    {
      "module": "module.nk26network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nk-ingress-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group-rule/sgr-02e15d84e6bb5b0fa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02e15d84e6bb5b0fa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08ff9b73e9cb12972",
            "security_group_rule_id": "sgr-02e15d84e6bb5b0fa",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nk26network.aws_security_group.secgroup26",
            "module.nk26network.aws_vpc.nkvpc26"
          ]
        }
      ]
    },
    {
      "module": "module.nk26network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nk-ingress-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group-rule/sgr-093687dc1ba7488dd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-093687dc1ba7488dd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08ff9b73e9cb12972",
            "security_group_rule_id": "sgr-093687dc1ba7488dd",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nk26network.aws_security_group.secgroup26",
            "module.nk26network.aws_vpc.nkvpc26"
          ]
        }
      ]
    },
    {
      "module": "module.nk26vm",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nk_instance26",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:737795138174:instance/i-00861651b0e1b2c74",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00861651b0e1b2c74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0be64198f22bcc5fd",
            "private_dns": "ip-10-0-13-173.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.13.173",
            "public_ip": "34.205.133.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03528a3b0db54b543",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09cd82c2731a92f55",
            "tags": {
              "Name": "nk-test-26"
            },
            "tags_all": {
              "Name": "nk-test-26"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0308a56bd15ff7e61"
            ]
          },
          "dependencies": [
            "module.nk26network.aws_subnet.snet_web_26",
            "module.nk26network.aws_vpc.nkvpc26"
          ]
        }
      ]
    }
  ]
}